[skp] opt: oobe & opt: DualRowSignal show ＆ fix: change languages